--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+.swiper-button-prev,
+.swiper-button-next {
+  display: none;
+}
+
+.mySwiper .swiper-pagination-bullet {
+  background: white;
+  width: 5px;
+  height: 5px;
+  border-radius: 100%;
+  opacity: 60%;
+}
+
+.mySwiper .swiper-pagination-bullet-active {
+  opacity: 1;
+  background: white;
+  width: 5px;
+  height: 5px;
+  border-radius: 100%;
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
