--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
+
 .swiper-button-prev,
 .swiper-button-next {
   display: none;
@@ -22,4 +24,8 @@
   height: 5px;
   border-radius: 100%;
   box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+* {
+  font-family: "Urbanist", sans-serif;
 }
